If you choose a Japanese font as the subtitle font in Windows-version VLC media player, subtitles are not displayed.
It doesn't happen with version 1.1.9.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
...
Linked items
0
Link issues together to show that they're related.
Learn more.
We don't have the log from stickpanda, but I know two issues about font setting on Windows, especially Japanese. These issues happens on 1.1.10 and later. 1.3.0-git has these issues, too.
First, some fonts has multibyte name and are set it to the registry entry (HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Fonts).
See attachment:reg_japanese_characters.jpg
This is a screenshot of registry entry on Windows 7. On Windows Vista/7, there are few fonts that contain Japanese characters in registry entry, maybe third party fonts only. But on Windows XP, system fonts like MS Gothic is set as "MS ゴシック".
VLC cannot handle properly when Japanese characters in registry entry. I have a patch for this issue.
Second, on some fonts, font name is different between registry entry and configuration setting.
See attachment:vlcsetting_japanese_characters.jpg attachment:reg_not_japanese_characters.jpg
On screenshot of VLC setting, "メイリオ"(Meiryo) is selected, but on registry entry, "Meiryo & Meiryo Italic & Meiryo UI & Meiryo UI Italic (TrueType)" is set. I don't have any idea how to treat with this issue at this time.
We don't have the log from stickpanda, but I know two issues about font setting on Windows, especially Japanese. These issues happens on 1.1.10 and later. 1.3.0-git has these issues, too.
1.3 should be better for fonts handling, but yes, you are right.
First, some fonts has multibyte name and are set it to the registry entry (HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Fonts).
See attachment:reg_japanese_characters.jpg
This is a screenshot of registry entry on Windows 7. On Windows Vista/7, there are few fonts that contain Japanese characters in registry entry, maybe third party fonts only. But on Windows XP, system fonts like MS Gothic is set as "MS ゴシック".
VLC cannot handle properly when Japanese characters in registry entry. I have a patch for this issue.
You are DA MAN! thanks!
Second, on some fonts, font name is different between registry entry and configuration setting.
See attachment:vlcsetting_japanese_characters.jpg attachment:reg_not_japanese_characters.jpg
On screenshot of VLC setting, "メイリオ"(Meiryo) is selected, but on registry entry, "Meiryo & Meiryo Italic & Meiryo UI & Meiryo UI Italic (TrueType)" is set. I don't have any idea how to treat with this issue at this time.
I do know how to fix it, but it is annoying. Those are multiple fonts in the same package.
We can parse it as http://svn.openttd.org/branches/1.0/src/fontcache.cpp does it, but this seemed low priority compared to remove of fontconfig on freetype module :)
I do know how to fix it, but it is annoying. Those are multiple fonts in the same package. We can parse it as http://svn.openttd.org/branches/1.0/src/fontcache.cpp does it, but this seemed low priority compared to remove of fontconfig on freetype module :)
I totally agree with you :-)
But a patch ( attachment:0001-freetype-handle-multibyte-characters-properly-in-reg.patch ) is effective solution for people who use fonts that have multibyte font name in registry entry.