Freetype: handle multibyte characters properly in registry entry.

Close #5700

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>